<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Playlist maker</string>
    <string name="title_hello">Привет, практикум</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="library" translatable="false">Медиатека</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="dark_theme" translatable="false">Темная тема</string>
    <string name="share_app" translatable="false">Поделиться приложением</string>
    <string name="mail_support" translatable="false">Написать в поддержку</string>
    <string name="terms_of_use" translatable="false">Пользовательское соглашение</string>
    <string name="android_developer_course">https://practicum.yandex.ru/android-developer/</string>
    <string name="message_for_developers">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="subject_for_developers">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="email_support">nfilimonov1@gmail.com</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="communication_problem">Проблемы со связью\n\nЗагрузка не удалась.Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
</resources>