<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_screen"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/header_text" />

    <Button
        android:id="@+id/search_button"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        app:cornerRadius="16dp"
        android:text="@string/search"
        android:textColor="@color/almost_black"
        android:textAllCaps="false"
        android:textSize="@dimen/header_text"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/almost_black"/>

    <Button
        android:id="@+id/library_button"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        app:cornerRadius="16dp"
        android:text="@string/library"
        android:textColor="@color/almost_black"
        android:textAllCaps="false"
        android:textSize="@dimen/header_text"
        app:icon="@drawable/library"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/almost_black"/>

    <Button
        android:id="@+id/settings_button"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="28dp"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        app:cornerRadius="16dp"
        android:text="@string/settings"
        android:textColor="@color/almost_black"
        android:textAllCaps="false"
        android:textSize="@dimen/header_text"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/almost_black"/>

</LinearLayout>

        





