<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/back_button"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/vector"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:text="@string/settings"
            android:textColor="@color/almost_black"
            android:textSize="22sp"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="64dp"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="300dp"
            android:layout_height="19dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="21dp"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="56dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="6dp"
            android:layout_marginTop="10dp"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp">

        <TextView
            android:layout_width="300dp"
            android:layout_height="19dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="21dp"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="22dp"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp">

        <TextView
            android:layout_width="300dp"
            android:layout_height="19dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="21dp"
            android:text="@string/mail_support"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/earphones"
            android:layout_gravity="end"
            android:paddingTop="22.1dp"
            android:paddingEnd="14dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hair"
            android:layout_gravity="end"
            android:paddingTop="25.1dp"
            android:paddingEnd="18dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/eye"
            android:layout_gravity="end"
            android:paddingTop="31.1dp"
            android:paddingEnd="20dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/eye"
            android:layout_gravity="end"
            android:paddingTop="31.1dp"
            android:paddingEnd="26dp"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp">

        <TextView
            android:layout_width="300dp"
            android:layout_height="19dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="21dp"
            android:text="@string/terms_of_use"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_forward"
            android:layout_gravity="end"
            android:paddingEnd="20dp"
            android:paddingTop="24dp" />

    </FrameLayout>

</LinearLayout>
