<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    tools:context=".SearchActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/search"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/header_text"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:layout_marginTop="14dp"
        android:layout_marginStart="16dp"/>
    
    <EditText
        android:id="@+id/edit_text_search"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text"
        android:lines="1"
        android:imeOptions="actionSearch"
        android:layout_marginTop="64dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/search"
        android:paddingStart="36dp"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="400"
        android:textSize="16sp"
        android:textColorHint="?attr/iconTint"
        android:textColor="@color/PM_black"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="29dp"
        android:layout_marginTop="75dp"
        android:src="@drawable/search_edit_text"/>

    <ImageView
        android:id="@+id/clear_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="76dp"
        android:src="@drawable/clear_search"
        android:visibility="gone"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="56dp"
        android:src="@drawable/shape_line_search"
        android:visibility="visible"/>

    <Button
        android:id="@+id/search_button_search_activity"
        app:layout_constraintWidth_percent="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/search"
        android:textColor="@color/main_activity_light"
        app:icon="@drawable/search"
        app:iconTint="@color/main_activity_light"
        style="@style/search_activity_button" />

    <Button
        app:layout_constraintEnd_toStartOf="@id/settings_button_search_activity"
        app:layout_constraintStart_toEndOf="@id/search_button_search_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/library"
        app:icon="@drawable/library"
        style="@style/search_activity_button" />

    <Button
        android:id="@+id/settings_button_search_activity"
        app:layout_constraintWidth_percent="0.333"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/settings"
        app:icon="@drawable/settings"
        style="@style/search_activity_button" />



</androidx.constraintlayout.widget.ConstraintLayout>